@startuml

class SpringController {
  + List<Usuario> listarUsuarios()
  + Usuario obtenerUsuario(int id)
  + void crearUsuario(Usuario usuario)
  + void actualizarUsuario(int id, Usuario usuario)
  + void eliminarUsuario(int id)
}

class SpringService {
  + List<Usuario> listarUsuarios()
  + Usuario obtenerUsuario(int id)
  + void crearUsuario(Usuario usuario)
  + void actualizarUsuario(int id, Usuario usuario)
  + void eliminarUsuario(int id)
}

class "UserRepository" {
  + List<Usuario> findAll()
  + Optional<Usuario> findById(int id)
  + void save(Usuario usuario)
  + void deleteById(int id)
}

class Database {
  Usuario
  Phone
}

class PhoneService {
  + List<PhoneVo> getPhones(UUID userId)
}

class PhoneRepository {
  + List<Phone> findByUserId(UUID userId)
}

class PhoneController {
  + List<PhoneVo> getPhones(UUID userId)
}

SpringController ..> SpringService : Llama a
SpringService ..> "UserRepository" : Utiliza
"UserRepository" ..> Database : Accede a
PhoneController --> PhoneService : Invoca
PhoneService --> PhoneRepository : Utiliza
"PhoneRepository" ..> Database : Accede a
@enduml
